--- a/config.json
+++ b/config.json
@@ -1,44 +1,162 @@
 {
   "cache_time": 7200,
   "api_site": {
-    "apibdzy": {
+{
+  "apibdzy": {
       "api": "https://api.apibdzy.com/api.php/provide/vod",
       "name": "百度云资源-4K",
-      "detail": "https://api.apibdzy.com"
     },
     "ukuapi": {
-      "api": "https://api.ukuapi.com/api.php/provide/vod",
+      "api": "https://api.ukuapi.com/api.php/provide/vod   ",
       "name": "U酷资源-4K",
-      "detail": "https://api.ukuapi.com"
     },
     "qilinzyz": {
       "api": "https://www.qilinzyz.com/api.php/provide/vod",
       "name": "麒麟资源-4K",
-      "detail": "https://www.qilinzyz.com"
-    },
+       },
     "fqzy": {
       "api": "http://api.fqzy.cc/api.php/provide/vod",
       "name": "番茄资源-4K/8K",
-      "detail": "http://api.fqzy.cc"
     },
     "wujinapi": {
       "api": "https://api.wujinapi.com/api.php/provide/vod",
       "name": "无尽资源-4K",
-      "detail": "https://api.wujinapi.com"
     },
     "hongniuzy": {
       "api": "https://www.hongniuzy1.com/inc/api.php",
       "name": "红牛资源-4K",
-      "detail": "https://www.hongniuzy1.com"
     },
     "8090zy": {
       "api": "http://zy.yilans.net:8090/api.php/provide/vod",
       "name": "8090资源-4K",
-      "detail": "http://zy.yilans.net:8090"
-    },
+    },   
+    "360": {
+    "api": "https://360zy.com/api.php/provide/vod",
+    "name": "360"
+  },
+  "ww": {
+    "api": "https://api.wwzy.tv/api.php/provide/vod",
+    "name": "旺旺"
+  },
+  "md": {
+    "api": "https://www.mdzyapi.com/api.php/provide/vod",
+    "name": "墨斗"
+  },
+  "hme": {
+    "api": "https://json02.heimuer.xyz/api.php/provide/vod",
+    "name": "黑木耳"
+  },
+  "hw": {
+    "api": "https://hw8.live/api.php/provide/vod",
+    "name": "华为吧"
+  },
+  "jy": {
+    "api": "https://jinyingzy.com/api.php/provide/vod",
+    "name": "金鹰"
+  },
+  "ok": {
+    "api": "https://okzyw9.com/api.php/provide/vod",
+    "name": "OK"
+  },
+  "bp": {
+    "api": "https://zpsps.com/api.php/provide/vod",
+    "name": "宝片"
+  },
+  "xhr": {
+    "api": "https://iqyi.xiaohuangrentv.com/api.php/provide/vod",
+    "name": "小黄人"
+  },
+  "nn": {
+    "api": "https://api.niuniuzy.me/api.php/provide/vod",
+    "name": "牛牛"
+  },
+  "yy": {
+    "api": "https://cj.yayazy.net/api.php/provide/vod",
+    "name": "丫丫"
+  },
+  "yt": {
+    "api": "https://cj.vodimg.top/api.php/provide/vod",
+    "name": "影图"
+  },
+  "uk": {
+    "api": "https://api.ukuapi.com/api.php/provide/vod",
+    "name": "U酷"
+  },
+  "hh": {
+    "api": "https://hhzyapi.com/api.php/provide/vod",
+    "name": "豪华"
+  },
+  "js": {
+    "api": "https://jszyapi.com/api.php/provide/vod",
+    "name": "极速"
+  },
+  "sn": {
+    "api": "https://suoniapi.com/api.php/provide/vod",
+    "name": "索尼"
+  },
+  "ik": {
+    "api": "https://ikunzyapi.com/api.php/provide/vod",
+    "name": "ikun"
+  },
+  "ff": {
+    "api": "http://cj.ffzyapi.com/api.php/provide/vod",
+    "name": "非凡"
+  },
+  "lz": {
+    "api": "https://cj.lziapi.com/api.php/provide/vod",
+    "name": "量子"
+  },
+  "bf": {
+    "api": "https://bfzyapi.com/api.php/provide/vod",
+    "name": "暴风"
+  },
+  "hn": {
+    "api": "https://www.hongniuzy2.com/api.php/provide/vod  ",
+    "name": "红牛"
+  },
+  "sd": {
+    "api": "http://sdzyapi.com/api.php/provide/vod",
+    "name": "闪电"
+  },
+  "yh": {
+    "api": "https://m3u8.apiyhzy.com/api.php/provide/vod",
+    "name": "樱花"
+  },
+  "wl": {
+    "api": "https://collect.wolongzyw.com/api.php/provide/vod/   ",
+    "name": "卧龙"
+  },
+  "pl": {
+    "api": "https://p2100.net/api.php/provide/vod",
+    "name": "飘零"
+  },
+  "wj": {
+    "api": "https://api.wujinapi.com/api.php/provide/vod",
+    "name": "无尽"
+  },
+  "sb": {
+    "api": "https://subocaiji.com/api.php/provide/vod",
+    "name": "速博"
+  },
+  "md": {
+    "api": "https://caiji.moduapi.cc/api.php/provide/vod",
+    "name": "魔都"
+  },
+  "zd": {
+    "api": "http://zuidazy.me/api.php/provide/vod",
+    "name": "最大"
+  },
+  "hf": {
+    "api": "https://hhzyapi.com/api.php/provide/vod",
+    "name": "火狐"
+  },
+  "xl": {
+    "api": "https://api.xinlangapi.com/xinlangapi.php/provide/vod",
+    "name": "新浪"
+  },
     "dyttzy": {
       "api": "http://caiji.dyttzyapi.com/api.php/provide/vod",
-      "name": "电影天堂资源",
+      "name": "电影天堂资源"
       "detail": "http://caiji.dyttzyapi.com"
     },
     "heimuer": {
@@ -78,7 +196,7 @@
     "jisu": {
       "api": "https://jszyapi.com/api.php/provide/vod",
       "name": "极速资源",
-      "detail": "https://jszyapi.com"
+      "detail": "https://jszyapi.com   "
     },
     "dbzy": {
       "api": "https://dbzy.tv/api.php/provide/vod",
@@ -113,4 +231,5 @@
       "name": "iKun资源"
     }
   }
+}
 }
